# hw_cards

./: .gitignore  CMakeLists.txt  README.md  cards
include/: CoolCard.hpp  ICreditCard.hpp  ICreditCardAccess.hpp  ICreditCardElevatedAccess.hpp  IPassportAccess.hpp  IPassportAcess.hpp  IUniversalChip.hpp  RemoteChipAdapter.hpp  UniversalChipCreditCardAccessDecorator.hpp  UniversalChipCreditCardElevatedAccessDecorator.hpp  UniversalChipCreditCardElevatedAccessGranter.hpp  UniversalChipDecorator.hpp  UniversalChipPassportAccessDecorator.hpp  UniversalChipPassportDecorator.hpp  UnversalChipCreditCardAccessDecorator.hpp  UnversalChipCreditCardDecorator.hpp  UnversalChipCreditCardElevatedAccessDecorator.hpp  UnversalChipCreditCardElevatedAccessGranter.hpp
sources/: CoolCard.cpp  UniversalChipCreditCardAccessDecorator.cpp  UniversalChipCreditCardElevatedAccessDecorator.cpp  UniversalChipCreditCardEleveatedAccessGranter.cpp  UniversalChipDecorator.cpp  UniversalChipPassportAccessDecorator.cpp
tests/: general_tests.cpp
